<resources>

    <string name="app_name">Card</string>
    <string name="Camera">Take a photo</string>
    <string name="User">About user</string>
    <string name="Album">Select from album</string>
    <string name="Cardcase">Show the cardcase</string>
    <string name="About">关于</string>
    <string name="Setting">设置</string>
    <string name="...">……</string>
    <string name="Search">Search</string>
    <string name="TestConnect">网络连接测试</string>
    <string name="IPaddr">192.168.1.100</string>
    <string name="Connect">发送</string>
    <string name="RecognizeRes">识别结果</string>
    <string name="Return">返回</string>
    <string name="Save">保存</string>
    <string name="Name">姓名：</string>
    <string name="Telephone">电话号码：</string>
    <string name="Company">公司：</string>
    <string name="Duty">职位：</string>
    <string name="Email">电子邮件：</string>
    <string name="Fax">传真</string>
    <string name="Address">公司地址：</string>
    <string name="Net">公司网址：</string>
    <string name="Note">备注信息：</string>
    <string name="HintCompanyName">XX公司</string>
    <string name="HintPersonName">张三</string>
    <string name="Title">Card</string>
    <string name="Cancel">取消</string>
    

</resources>
