<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#DCDCDC" >

        <ImageButton
            android:id="@+id/btn_cardcase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:background="#00000000"
            android:contentDescription="@string/Cardcase"
            android:src="@drawable/cardcase" />

        <ImageButton
            android:id="@+id/btn_album"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:background="#00000000"
            android:contentDescription="@string/Album"
            android:src="@drawable/album" />

        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:background="#00000000"
            android:contentDescription="@string/Camera"
            android:src="@drawable/camera" />

        <ImageButton
            android:id="@+id/btn_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/User"
            android:src="@drawable/user" />
    </LinearLayout>
    
    <RelativeLayout
   		android:id="@+id/maintitlebar"
    	android:layout_width="match_parent"
    	android:layout_height="50dp"
    	android:layout_alignParentTop="true"
    	android:background="@android:color/darker_gray" >
    
    	<ImageView
    	    android:id="@+id/recordsearch"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_centerVertical="true"
    	    android:paddingLeft="10dp"
    	    android:src="@drawable/search"
    	    android:contentDescription="@string/..."
    	    />
    	
    	<ImageView
    	    android:id="@+id/recordadd"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentRight="true"
    	    android:layout_centerVertical="true"
    	    android:paddingRight="10dp"
    	    android:src="@drawable/add"
    	    android:contentDescription="@string/..."
    	    />
    
    	<EditText
    	    android:id="@+id/inputkey"
    	   	android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:gravity="center"
    	    android:layout_centerVertical="true"
    	    android:background="@android:drawable/alert_light_frame"
    	    android:layout_toRightOf="@id/recordsearch"
    	    android:layout_toLeftOf="@id/recordadd"
    	    android:singleLine="true"
    	    android:textSize="20sp"
    	    android:hint="@string/HintPersonName"
    	    android:inputType="@null"
    	    />
    
    	<TextView
    	    android:id="@+id/title"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_toRightOf="@id/recordsearch"
    	    android:layout_toLeftOf="@id/recordadd"
    	    android:layout_centerVertical="true"
    	    android:gravity="center"
    	    android:singleLine="true"
    	    android:text="@string/Title"
    	    android:textSize="20sp"
    	    />

	</RelativeLayout>

    <ImageView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/..."/>

    <com.njucs.card.record.SlideCutListView
        android:id="@+id/list_recent"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/layout1"
        android:layout_below="@id/maintitlebar"
        android:listSelector="@android:color/transparent"
        android:divider="@drawable/divider"
        android:background="@null"
        android:cacheColorHint="@android:color/transparent">
        
    </com.njucs.card.record.SlideCutListView>

</RelativeLayout>