<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDD" >

    <TableRow
        android:id="@+id/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="54dp"
        android:background="#ffffff" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/About"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="100dp"
            android:text="@string/About"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="23sp" />

        <ImageView
            android:layout_height="wrap_content"
            android:contentDescription="@string/..."
            android:src="@drawable/right" />
    </TableRow>

    <TableRow
        android:id="@+id/Setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/About"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:background="#ffffff" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Setting"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="100dp"
            android:text="@string/Setting"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="23sp" />

        <ImageView
            android:layout_height="wrap_content"
            android:contentDescription="@string/..."
            android:src="@drawable/right" />
    </TableRow>

    <TableRow
        android:id="@+id/TestConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Setting"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:background="#ffffff" >
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/TestConnect"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/testconnect" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/TestConnect"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="23sp" />

        <ImageView
            android:id="@+id/TestConnectView"
            android:layout_height="wrap_content"
            android:contentDescription="@string/..."
            android:src="@drawable/right" />
        
    </TableRow>

</RelativeLayout>